# mysolid-homeassistant

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/mysolid/: __init__.py  alarm_control_panel.py  api.py  binary_sensor.py  camera.py  config_flow.py  const.py  constants.py  coordinator.py  crypto.py  diagnostics.py  entity.py  exceptions.py  manifest.json  models.py  push.py  sensor.py  services.py  services.yaml  storage.py  strings.json  switch.py
custom_components/mysolid/_proto/: __init__.py  android_checkin_pb2.py  checkin_pb2.py  mcs_pb2.py
docs/: MYSOLID.md
scripts/: regenerate_protobuf_stubs.py
tests/: conftest.py  test_client.py  test_crypto.py  test_models.py  test_push.py  test_push_checkin.py
tests/components/mysolid/: __init__.py  conftest.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_service.py
